# Apex

./: .gitignore  CMakeLists.txt  README.md
GraphSolver/: CMakeLists.txt  GraphSolver-SVFG.cpp  GraphSolver.cpp  Helper.cpp  Helper.hpp  ReducedICFG.cpp  ReducedICFG.hpp  Trial.cpp
llvm-ir/ArduPilot/: README.md  llvm-generator.py
testcases/: ardu-chute-policy.txt  crash-check-policy.txt
